--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -27,7 +28,7 @@
     "axios": "^1.7.9",
     "eas-cli": "^15.0.11",
     "expo": "^52.0.0",
-    "expo-blur": "~14.0.3",
+    "expo-blur": "^14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "^13.0.3",
     "expo-gl": "^15.0.4",
