--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.12.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-three/drei": "^10.0.4",
@@ -26,16 +29,25 @@
     "@types/three": "^0.174.0",
     "@types/topojson-client": "^3.1.5",
     "axios": "^1.7.9",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "base-64": "^1.0.0",
     "eas-cli": "^15.0.11",
     "expo": "^52.0.0",
     "expo-blur": "^14.0.3",
-    "expo-constants": "~17.0.5",
+    "expo-build-properties": "^0.13.2",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.15",
     "expo-font": "^13.0.3",
     "expo-gl": "^15.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image": "^2.0.5",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-print": "^14.0.3",
     "expo-router": "~4.0.17",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -43,6 +55,7 @@
     "expo-three": "^8.0.0",
     "expo-updates": "^0.26.19",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
     "install": "^0.13.0",
     "jetifier": "^2.0.0",
     "lucide-react-native": "^0.475.0",
@@ -51,8 +64,9 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.1.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
